[package]
name = "untest"
version = "0.1.0"
edition = "2021"

authors = ["Yuki Yamaura <ymruki@gmail.com>"]
license = "BSL-1.0"
description = "Test harness"
homepage = "https://github.com/yamaura/untest"
repository = "https://github.com/yamaura/untest"
readme = "README.md"
keywords = []
categories = []
include = ["src/**/*.rs", "README.md", "LICENSE"]

[package.metadata.release]
push = false
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "Bump version to {{version}}"
tag-message = "{{tag_name}}"

[dependencies]
untest_macro = { path = "untest_macro" }

[workspace]
members = ["untest_macro"]
