[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
authors = ["Yuki Yamaura <ymruki@gmail.com>"]
edition = "2024"
license = "BSL-1.0"
description = "Test harness"
homepage = "https://github.com/yamaura/untest"
repository = "https://github.com/yamaura/untest"
readme = "../../README.md"

[workspace.metadata.release]
push = false
tag-name = "{{version}}"
pre-release-commit-message = "Bump version to {{version}}"
tag-message = "{{tag_name}}"

[workspace.metadata.docs.rs]
all-features = true

[workspace.dependencies]
thiserror = "2.0.12"
inventory = "0.3.20"
