[package]
name = "untest_macro"
version = "0.1.0"
edition = "2021"

authors = ["Yuki Yamaura <ymruki@gmail.com>"]
license = "BSL-1.0"
description = "Macros for untest crate"
homepage = "https://github.com/yamaura/untest"
repository = "https://github.com/yamaura/untest"
readme = "README.md"
keywords = []
categories = []
include = ["src/**/*.rs", "README.md"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.104", features = ["full"] }
