[package]
name = "untest"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
libtest-mimic = ["dep:libtest-mimic"]
default = []

[dependencies]
untest_macro = { path = "../untest_macro" }
thiserror = { workspace = true }
inventory.workspace = true
libtest-mimic = { version = "0.8.1", optional = true }
